[workspace]
resolver = "3"
members = ["crates/cert_tool", "crates/mproxy", "crates/mproxy_common"]
default-members = ["crates/mproxy"]

[workspace.package]
publish = false
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
acme-v2 = { version = "0.9.3"}
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
log = "0.4.0"
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.48", features = ["derive"] }
x509-parser = {version = "0.18.0", features = ["default"]}
chrono = {version = "0.4.42", features = ["serde"]}
mproxy_common = { path = "crates/mproxy_common" }
pingora = { version = "0.6.0", features = ["proxy", "cache", "openssl"] }
toml = { version = "0.9.8", features = ["serde"]}

openssl = { version = "*", features = ["vendored"] }


[workspace.lints.clippy]
style = { level = "allow", priority = -1 }
too_many_arguments = "allow"
large_enum_variant = "allow"
