[package]
name = "cert_tool"
version = "0.1.0"
edition = "2024"
publish = false
description = "A tool for managing certificates"
license = "Apache-2.0"

[features]
default = ["lib"]
lib = []

[lib]
name = "cert_tool_lib"
path = "src/lib.rs"

[[bin]]
name = "cert_tool"
path = "src/main.rs"

[dependencies]
clap.workspace = true
mproxy_common.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenv.workspace = true
tokio.workspace = true
serde_json = "1.0.140"
chrono.workspace = true
[lints]
workspace = true

[package.metadata.rpm]
package = "cert-tool"
release = "1"
license = "Apache-2.0"
summary = "Certificate management tool"
description = "A tool for managing certificates"
requires = ["openssl"]
build_requires = ["openssl-devel"]

[package.metadata.rpm.cargo]
buildflags = ["--release", "--bin", "cert_tool"]
target = "x86_64-unknown-linux-gnu"

[package.metadata.rpm.targets]
cert_tool = { path = "/usr/bin/cert_tool" }
